<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/txt_english"
            android:id="@+id/btnEnglish"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/txt_malayalam"
            android:id="@+id/btnMalayalam"/>
    <Button android:layout_width="wrap_content" android:layout_height="wrap_content"
            android:text="@string/txt_arabic"
            android:id="@+id/btnArabic"/>
</LinearLayout>