<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="10dp">

    <TextView
            android:id="@+id/tvFirstText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_first_text"
            app:layout_constraintBottom_toTopOf="@+id/tvSecondText"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>

    <TextView
            android:id="@+id/tvSecondText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_second_text"
            app:layout_constraintTop_toBottomOf="@+id/tvFirstText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tvThirdText"/>

    <TextView
            android:id="@+id/tvThirdText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_third_text"
            app:layout_constraintTop_toBottomOf="@+id/tvSecondText"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>